feat: Implemented tracking log validator functionality for agents