@@ -1,7 +1,9 @@
 
 package acme.constraints;
 
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.validation.ConstraintValidatorContext;
 
@@ -67,11 +69,13 @@ public class TrackingLogValidator extends AbstractValidator<ValidTrackingLog, Tr
 			// Unique dissatisfaction check
 
 			if (trackingLog.getStatus().equals(TrackingLogStatus.DISSATISFACTION)) {
-				boolean isPublished = !trackingLog.getDraftMode();
-				super.state(context, isPublished, "draftMode", "acme.validation.trackingLog.draftModeDissatisfaction.message");
+				boolean isPublished = this.repository.findAllByClaimId(trackingLog.getClaim().getId()) //
+					.stream().anyMatch(t -> !t.getDraftMode());
+				super.state(context, isPublished, "status", "acme.validation.trackingLog.draftModeDissatisfaction.message");
 
-				boolean isUnique = this.repository.findAllByClaimIdOrdered(trackingLog.getClaim().getId()) //
-					.stream().noneMatch(t -> t.getStatus().equals(TrackingLogStatus.DISSATISFACTION));
+				boolean isUnique = this.repository.findAllByClaimId(trackingLog.getClaim().getId()) //
+					.stream().filter(t -> t.getId() != trackingLog.getId()) //
+					.noneMatch(t -> t.getStatus().equals(TrackingLogStatus.DISSATISFACTION));
 				super.state(context, isUnique, "status", "acme.validation.trackingLog.statusDissatisfaction");
 
 			}
@@ -80,15 +84,16 @@ public class TrackingLogValidator extends AbstractValidator<ValidTrackingLog, Tr
 
 			boolean greaterPercentage = true;
 
-			if (trackingLog.getResolutionPercentage() != null) {
-				List<TrackingLog> allOrdered = this.repository.findAllByClaimIdOrdered(trackingLog.getClaim().getId());
-				List<TrackingLog> beforeActual = allOrdered.stream().filter(t -> t.getLastUpdateMoment().before(trackingLog.getLastUpdateMoment())).toList();
+			if (trackingLog.getResolutionPercentage() != null && trackingLog.getLastUpdateMoment() != null) {
+				List<TrackingLog> allByClaim = this.repository.findAllByClaimId(trackingLog.getClaim().getId());
+				List<TrackingLog> beforeActual = allByClaim.stream().filter(t -> t.getLastUpdateMoment().before(trackingLog.getLastUpdateMoment())).collect(Collectors.toList());
 
 				if (!beforeActual.isEmpty()) {
+					beforeActual.sort(Comparator.comparing(TrackingLog::getResolutionPercentage).reversed());
 					TrackingLog previous = beforeActual.get(0);
 
 					if (trackingLog.getStatus().equals(TrackingLogStatus.DISSATISFACTION))
-						greaterPercentage = trackingLog.getResolutionPercentage() == previous.getResolutionPercentage();
+						greaterPercentage = allByClaim.stream().anyMatch(t -> t.getResolutionPercentage().equals(Double.valueOf(100)));
 					else
 						greaterPercentage = trackingLog.getResolutionPercentage() > previous.getResolutionPercentage();
 				}
